fix: Remove checkout page, add checkout feature in cart page, and calculate the checkout result (product price + shipping price).

--- a/stores/templates/stores/checkout_product.html
+++ b/stores/templates/stores/checkout_product.html
@@ -130,7 +130,7 @@
 
                     </div><br><br>
                     <div class="payment">
-                        <button id="showPaymentButton">Payment</button>
+                        <button id="showPaymentButton" class="payment-button">Payment</button>
                     </div><br>
 
                     <div class="totalPayment">
