--- a/stores/static/css/cart-shop-style.css
+++ b/stores/static/css/cart-shop-style.css
@@ -64,16 +64,17 @@
     margin-bottom: 20px;
 }
 
-.cart .container .card-product .cart-details-product h6 {
-    padding-top: 10px;
-    margin-left: 20px;
+.cart .container .card-product .cart-details-product .cart-lists h6 {
+    padding-top: 40px;
+    margin-left: 5px;
+    display: flex;
 }
 
-.cart .container .card-product .cart-details-product h6 i {
+.cart .container .card-product .cart-details-product .cart-lists h6 i {
     color: rgb(112,52,87);
 }
 
-.cart .container .card-product .cart-details-product h6 a {
+.cart .container .card-product .cart-details-product .cart-lists h6 a {
     text-decoration: none;
     color: rgb(112,52,87);
 }
@@ -91,9 +92,10 @@
     margin-right: 70px;
     display: flex;
     align-items: flex-start;
-    width: 299px;
+    width: 255px;
     height: 80px;
     margin-top: 15px;
+    margin-left: 10px;
 }
 
 .cart .container .card-product .cart-details-product .cart-lists .product-smartphone img, .product-food img {
@@ -121,8 +123,33 @@
 }
 
 .cart .container .card-product .cart-details-product .cart-lists .product-quantity {
-    margin-right: 120px;
+    margin-right: 10px;
     margin-top: 35px;
+    width: 100px;
+}
+
+.cart .container .card-product .cart-details-product .cart-lists .product-quantity .minus {
+    width: 25px;
+    height: 30px;
+    border-radius: 20%;
+    color: rgb(148, 5, 5);
+}
+
+.cart .container .card-product .cart-details-product .cart-lists .product-quantity .plus {
+    width: 25px;
+    height: 30px;
+    border-radius: 20%;
+    color: blue;
+}
+
+.cart .container .card-product .cart-details-product .cart-lists .product-quantity .plus:hover {
+    background-color: rgb(29, 14, 236);
+    color: white;
+}
+
+.cart .container .card-product .cart-details-product .cart-lists .product-quantity .minus:hover {
+    background-color: rgb(148, 5, 5);
+    color: white;
 }
 
 .cart .container .card-product .cart-details-product .cart-lists .product-quantity span {
@@ -134,18 +161,24 @@
 
 .cart .container .card-product .cart-details-product .cart-lists .total_price {
     margin-top: 35px;
-    margin-right: 55px;
     width: 150px;
     background-color: white;
 }
 
 .cart .container .card-product .cart-details-product .cart-lists .total_price p {
     font-weight: 500;
+    margin-left: 15px;
 }
 
 
 .cart .container .card-product .cart-details-product .cart-lists .product-action {
     margin-top: 30px;
+}
+
+.cart .container .card-product .cart-details-product .cart-lists .product-action .remove-item {
+    cursor: pointer;
+    color: red;
+    margin-left: 20px;
 }
 
 
@@ -165,4 +198,138 @@
     color: white;
     background-color: rgb(112,52,87);
     font-weight: 600;
+}
+
+
+/* Styling for shipping options */
+.cart .container .card-product .cart-details-product #shipping-options-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+}
+
+.cart .container .card-product .cart-details-product #shipping-options-container .shippingOptions {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+}
+
+.cart .container .card-product .cart-details-product #shipping-options-container .shippingOptions .pilihButton {
+    width: 68px;
+    height: 30px;
+    border-radius: 20%;
+    background-color: white;
+    color: rgb(112,52,87);
+    margin-left: 0.5rem;
+    margin-right: 1rem;
+}
+
+.cart .container .card-product .cart-details-product #shipping-options-container .shippingOptions .pilihButton:hover {
+    width: 68px;
+    height: 30px;
+    border-radius: 20%;
+    background-color: rgb(112,52,87);
+    color: white;
+    margin-left: 0.5rem;
+    margin-right: 1rem;
+}
+
+
+/* Form to choose shipping options */
+.cart .container .card-product .cart-details-product #shipping-options-container .popUpForm form {
+    margin-left: 1rem;
+}
+
+.cart .container .card-product .cart-details-product #shipping-options-container .popUpForm form .form-1 .chooseTypes span {
+    font-weight: 600;
+}
+
+.cart .container .card-product .cart-details-product #shipping-options-container .popUpForm form .form-1 .estimated {
+    display: flex;
+}
+
+.cart .container .card-product .cart-details-product #shipping-options-container .popUpForm form .form-1 .estimated .estimation-text {
+    margin-right: 0.5rem;
+}
+
+.cart .container .card-product .cart-details-product #shipping-options-container .popUpForm form .form-1 .estimated .estimation-time {
+    font-weight: 500;
+    font-size: 200;
+    word-spacing: 0;
+}
+
+.cart .container .card-product .cart-details-product #shipping-options-container .popUpForm form .saveButton {
+    width: 68px;
+    height: 30px;
+    border-radius: 20%;
+    background-color: white;
+    color: rgb(112,52,87);
+}
+
+.cart .container .card-product .cart-details-product #shipping-options-container .popUpForm form .saveButton:hover {
+    width: 68px;
+    height: 30px;
+    border-radius: 20%;
+    background-color: rgb(112,52,87);
+    color: white;
+}
+
+
+/* Adding new style for selected shipping options from Javascript function */
+.showSelectedTypes {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+}
+
+.selectedValue {
+    margin-right: 10px;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+
+.formattedPrice {
+    font-weight: 600;
+    color: rgb(175, 2, 2);
+    margin-right: 2rem;
+}
+
+
+/* To show estimated Time for the selected shipping options */
+.estimated-Time {
+    margin-right: 0.5rem;
+}
+
+.estimatedTime {
+    font-weight: 500;
+    font-size: 200;
+    word-spacing: 0;
+}
+
+
+/* Summary Checkout Product Price */
+.cart .container .card-product .cart-details-product .summaryCheckout {
+    margin-left: 1rem;
+    width: 30rem;
+    height: 5rem;
+    background-color: rgb(23,22,22);
+    color: rgb(175, 26, 113);
+    font-weight: 600;
+    font-size: large;
+}
+
+.cart .container .card-product .cart-details-product .summaryCheckout .totalProductText {
+    margin-right: 0.6rem;
+    margin-left: 0.5rem;
+    padding-top: 1.5rem;
+}
+
+.cart .container .card-product .cart-details-product .summaryCheckout .totalCostText {
+    margin-right: 0.6rem;
+    margin-left: 1rem;
+    padding-top: 1.5rem;
+}
+
+.cart .container .card-product .cart-details-product .summaryCheckout #totalProducts, #totalCost {
+    padding-top: 1.5rem;
 }
