--- a/stores/static/css/cart-shop-style.css
+++ b/stores/static/css/cart-shop-style.css
@@ -309,27 +309,29 @@
 
 /* Summary Checkout Product Price */
 .cart .container .card-product .cart-details-product .summaryCheckout {
-    margin-left: 1rem;
-    width: 30rem;
-    height: 5rem;
+    margin-left: 3rem;
+    width: 65rem;
+    height: 8rem;
     background-color: rgb(23,22,22);
+    font-weight: 500;
+    /* font-size: large; */
+}
+
+
+.cart .container .card-product .cart-details-product .summaryCheckout .totalProductText, .totalCostText, .productNumbersText {
+    margin-right: 0.4rem;
+    margin-left: 3.5rem;
+    padding-top: 1.5rem;
     color: rgb(175, 26, 113);
-    font-weight: 600;
-    font-size: large;
 }
 
-.cart .container .card-product .cart-details-product .summaryCheckout .totalProductText {
-    margin-right: 0.6rem;
-    margin-left: 0.5rem;
+.cart .container .card-product .cart-details-product .summaryCheckout #totalProducts, #totalCost, #productNumbers {
     padding-top: 1.5rem;
+    color: white;
 }
 
-.cart .container .card-product .cart-details-product .summaryCheckout .totalCostText {
-    margin-right: 0.6rem;
-    margin-left: 1rem;
-    padding-top: 1.5rem;
-}
-
-.cart .container .card-product .cart-details-product .summaryCheckout #totalProducts, #totalCost {
-    padding-top: 1.5rem;
+/* Warning to choose the delivery option */
+.cart .container .card-product .cart-details-product .summaryCheckout #delivery-warning {
+    padding-top: 5rem;
+    margin-left: -39rem;
 }
