--- a/stores/static/css/product-food-list-style.css
+++ b/stores/static/css/product-food-list-style.css
@@ -139,6 +139,7 @@
     height: 1020px;
     width: 1180px;
     background-color: white;
+    margin-top: -3rem;
 }
 
 .whole-body .container .card-review .card-sub-title {
