--- a/stores/templates/stores/product_food_list.html
+++ b/stores/templates/stores/product_food_list.html
@@ -67,7 +67,7 @@
                     <div class="description-text">
                         <p>{{ list_product_food.food_description }}</p>
                     </div>
-                </div><br>
+                </div>
                 <div class="card-review">
                     <div class="card-sub-title">
                         <h3>Product Review</h3>
